--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=online-book-store
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_up
+spring.datasource.url=jdbc:mysql://localhost:3306/book_store
 spring.datasource.username=root
 spring.datasource.password=42654874
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
